kubernetes-documentation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: documentation
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - docs.bosca.io
      secretName: docs-bosca-tls
  rules:
    - host: docs.bosca.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: documentation
                port:
                  number: 80
